assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap');

/* Quiz container/Main game are*/
#quiz-container {
  margin-top: 30px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fff;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 10px;
}

/*For the body, background image and overall positioning*/
body {
  background-image: url("../images/background.webp");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: 'Poppins', sans-serif;
  min-height: 100vh
}

/* Header/Logo */
h1 {
  font-family: 'Lobster', cursive;
  font-size: 40px;
  margin-bottom: 30px;
  color: #fff;
}

/* Individual category buttons*/
#comedy-btn,
#action-btn,
#horror-btn {
  font-family: 'Lobster', cursive;
  font-size: 20px;
}

/* Styling for the questions themselves*/
#question-container {
  color: black;
  text-transform: none;
  margin-top: 20px;
}

/* Styling for the options */
.options-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 20px;
}

/* default button styling */
button {
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 10px 20px;
  margin: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

/* hover on button color change */
button:hover {
  background-color: lightseagreen;
}

/* selected option color and size change */
.selected {
  background-color: lightseagreen;
  transition: transform .2s;
  transform: scale(1.2);
  margin-left: 30px;
  margin-right: 30px;
}

/* Positioning for category buttons */
#category-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Current category styling */
#current-category {
  font-family: 'Lobster', cursive;
  font-size: 25px;
  text-transform: capitalize;
  background-color: #b63b2a;
  color: #fff;
  border-radius: 5px;
  padding: 10px 20px;
}

/* positioning for results div elements*/
#results {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* individual styling for the score containers*/
#score-container,
#incorrect-container {
  background-color: #4CAF50;
  color: #fff;
  border-radius: 5px;
  padding: 10px 20px;
  margin: 10px;
}

/* styling for the submit/next button*/
#submit-btn {
  background-color: #ecae4b;
  font-weight: bold;
}

/* hover effect color change for the submit/next button*/
#submit-btn:hover {
  background-color: #b63b2a;
}

/*styling for the popup error message*/
#error {
  display: none;
  background-color: #b63b2a;
  color: #fff;
  text-align: center;
  border-radius: 35px;
  border: 10px #ecae4b solid;
  position: fixed;
  z-index: 1;
  top: 0;
  width: 80%;
  height: 50%;
  overflow: auto;
  margin-top: 150px;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.errorText {
  margin: 10px;
}

/* 404 page styling */
.missing-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fff;
  border-radius: 10px;
  padding: 50px;
  text-align: center;
}

.missing-page a {
  text-decoration: none;
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 10px 20px;
  margin: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.missing-page h1 {
  color: black;
  margin: 0;
}

/*media queries*/
@media (min-width: 768px) {

  h1 {
    font-size: 64px;
  }

  #comedy-btn,
  #action-btn,
  #horror-btn {
    font-size: 25px;
  }

  #category-buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  #error {
    width: 600px;
    height: 300px;
  }

}

